fixed octicon, spacing issues etc.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,6 +47,7 @@
 
 .nav-logo {
   margin-top:5px;
+  padding-left:3%;
 
 }
 
@@ -58,4 +59,10 @@
   color:white;
 }
 
+.button-right {
+  padding-right:4px;
+}
 
+.octicon-beer {
+  color:white;
+}
